--- a/tienda-informatica/src/main/webapp/WEB-INF/jsp/fragmentos/nav.jspf
+++ b/tienda-informatica/src/main/webapp/WEB-INF/jsp/fragmentos/nav.jspf
@@ -16,8 +16,26 @@
             </div>
         </nav>
     </div>
-    <div class="d-flex me-2 p-1 "><a href=""></a><i class="bi bi-box-arrow-in-right"></i>LOGIN
+
+    <%
+    if (session.getAttribute("usuario")!=null) {
+    Usuario loggeado = (Usuario) session.getAttribute(("usuario"));
+    %>
+    <div class="d-flex me-2 p-1 ">
+
+        <p>Hola <% loggeado.getNombre() %> </p>
+        <form action="${pageContext.request.contextPath}/tienda/usuarios/login/" method="post" style="display: inline;">
+            <input type="hidden" name="__method__" value="logout"/>
+            <input type="submit" value="LOGOUT" />
+        </form>
     </div>
+    <%} else {%>
+    <div class="d-flex me-2 p-1 ">
+        <form action="${pageContext.request.contextPath}/tienda/usuarios/login" style="display: inline;">
+            <input type="submit" value="LOGIN" />
+        </form>
+    </div>
+    <%}%>
 </div>
 <div class="d-flex flex-column vh-100">
     <div class="container-fluid flex-grow-1">
