--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/detalle-comercial.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/detalle-comercial.html
@@ -11,6 +11,8 @@
         }
 
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -78,6 +80,27 @@
             <input th:value="${comercial.comision}" value="ciudad" readonly="readonly"/>
         </div>
     </div>
+    <table class="table table-bordered">
+        <h3>Pedidos del comercial</h3>
+        <thead>
+        <tr id="titulos">
+            <th>#</th>
+            <th id="total">Total</th>
+            <th id="fecha">Fecha</th>
+            <th id="idCliente">Cliente</th>
+        </tr>
+        </thead>
+        <tbody th:each="pedido : ${pedidos} " id="tabla">
+        <tr>
+            <th th:text="${pedido.id}"></th>
+            <th th:text="${pedido.total}" ></th>
+            <th th:text="${pedido.fecha}" ></th>
+            <th><a th:text="${pedido.nombre_cliente}" th:href="@{/clientes/{id}(id=${pedido.id_cliente})}" ></a></th>
+        </tr>
+        </tbody>
+    </table>
+    <div>El total de pedidos es <span th:text="${totalPedidos}"></span> y este comercial ha hecho <span th:text="${porcentaje}"></span></div>
+
 
 </div>
 
