--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/crear-cliente.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/crear-cliente.html
@@ -39,6 +39,10 @@
       </div>
       <div style="float: none;width: auto;overflow: hidden;">
         <input th:field="*{nombre}" />
+        <ul th:if="${#fields.hasErrors('nombre')}">
+          <li th:each="err : ${#fields.errors('nombre')}" th:text="${err}" class="error" />
+        </ul>
+
       </div>
     </div>
 
@@ -49,6 +53,10 @@
       </div>
       <div style="float: none;width: auto;overflow: hidden;">
         <input th:field="*{apellido1}" />
+        <ul th:if="${#fields.hasErrors('apellido1')}">
+          <li th:each="err : ${#fields.errors('apellido1')}" th:text="${err}" class="error" />
+        </ul>
+
       </div>
     </div>
 
@@ -59,6 +67,10 @@
       </div>
       <div style="float: none;width: auto;overflow: hidden;">
         <input th:field="*{apellido2}" />
+        <ul th:if="${#fields.hasErrors('apellido2')}">
+          <li th:each="err : ${#fields.errors('apellido2')}" th:text="${err}" class="error" />
+        </ul>
+
       </div>
     </div>
 
@@ -68,6 +80,10 @@
       </div>
       <div style="float: none;width: auto;overflow: hidden;">
         <input th:field="*{ciudad}" />
+        <ul th:if="${#fields.hasErrors('ciudad')}">
+          <li th:each="err : ${#fields.errors('ciudad')}" th:text="${err}" class="error" />
+        </ul>
+
       </div>
     </div>
 
@@ -77,6 +93,10 @@
       </div>
       <div style="float: none;width: auto;overflow: hidden;">
         <input th:field="*{categoria}" />
+        <ul th:if="${#fields.hasErrors('categoria')}">
+          <li th:each="err : ${#fields.errors('categoria')}" th:text="${err}" class="error" />
+        </ul>
+
       </div>
     </div>
 
