--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/crear-comercial.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/crear-comercial.html
@@ -39,6 +39,9 @@
             </div>
             <div style="float: none;width: auto;overflow: hidden;">
                 <input th:field="*{nombre}" />
+                <ul th:if="${#fields.hasErrors('nombre')}">
+                    <li th:each="err : ${#fields.errors('nombre')}" th:text="${err}" class="error" />
+                </ul>
             </div>
         </div>
 
@@ -49,6 +52,9 @@
             </div>
             <div style="float: none;width: auto;overflow: hidden;">
                 <input th:field="*{apellido1}" />
+                <ul th:if="${#fields.hasErrors('apellido1')}">
+                    <li th:each="err : ${#fields.errors('apellido1')}" th:text="${err}" class="error" />
+                </ul>
             </div>
         </div>
 
@@ -59,6 +65,9 @@
             </div>
             <div style="float: none;width: auto;overflow: hidden;">
                 <input th:field="*{apellido2}" />
+                <ul th:if="${#fields.hasErrors('apellido2')}">
+                    <li th:each="err : ${#fields.errors('apellido2')}" th:text="${err}" class="error" />
+                </ul>
             </div>
         </div>
 
@@ -68,6 +77,9 @@
             </div>
             <div style="float: none;width: auto;overflow: hidden;">
                 <input th:field="*{comision}" />
+                <ul th:if="${#fields.hasErrors('comision')}">
+                    <li th:each="err : ${#fields.errors('comision')}" th:text="${err}" class="error" />
+                </ul>
             </div>
         </div>
 
