cosas de validacion, revisar en casa, y revisar el controlAdvice

--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/crear-cliente.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/crear-cliente.html
@@ -100,6 +100,19 @@
       </div>
     </div>
 
+    <div style="margin-top: 6px;" class="clearfix">
+      <div style="float: left;width: 50%">
+        Email
+      </div>
+      <div style="float: none;width: auto;overflow: hidden;">
+        <input th:field="*{email}" />
+        <ul th:if="${#fields.hasErrors('email')}">
+          <li th:each="err : ${#fields.errors('email')}" th:text="${err}" class="error" />
+        </ul>
+
+      </div>
+    </div>
+
   </form>
 </div>
 
