--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/detalle-comercial.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/detalle-comercial.html
@@ -80,6 +80,14 @@
             <input th:value="${comercial.comision}" value="ciudad" readonly="readonly"/>
         </div>
     </div>
+    <div style="margin-top: 6px;" class="clearfix">
+        <div style="float: left;width: 50%">
+            <label>Email</label>
+        </div>
+        <div style="float: none;width: auto;overflow: hidden;">
+            <input th:value="${comercial.email}" value="email" readonly="readonly"/>
+        </div>
+    </div>
     <table class="table table-bordered">
         <h3>Pedidos del comercial</h3>
         <thead>
