--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/editar-comercial.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/editar-comercial.html
@@ -79,6 +79,15 @@
             </div>
         </div>
 
+        <div style="margin-top: 6px;" class="clearfix">
+            <div style="float: left;width: 50%">
+                <label>Email</label>
+            </div>
+            <div style="float: none;width: auto;overflow: hidden;">
+                <input th:field="*{email}"/>
+            </div>
+        </div>
+
     </form>
 </div>
 
