--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/clientes.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/clientes.html
@@ -35,12 +35,14 @@
     <hr/>
   </div>
   <div class="clearfix">
-    <div style="float: left;width: 14%">Id</div>
-    <div style="float: left;width: 14%"th:text="#{nombre}"></div>
-    <div style="float: left;width: 14%" th:text="#{apellido1}"></div>
-    <div style="float: left;width: 14%" th:text="#{apellido2}"></div>
-    <div style="float: left;width: 14%"th:text="#{clientes.ciudad}"></div>
-    <div style="float: left;width: 14%"th:text="#{clientes.categoria}"></div>
+    <div style="float: left;width: 10%">Id</div>
+    <div style="float: left;width: 10%"th:text="#{nombre}"></div>
+    <div style="float: left;width: 10%" th:text="#{apellido1}"></div>
+    <div style="float: left;width: 10%" th:text="#{apellido2}"></div>
+    <div style="float: left;width: 10%"th:text="#{clientes.ciudad}"></div>
+    <div style="float: left;width: 10%"th:text="#{clientes.categoria}"></div>
+    <div style="float: left;width: 10%">email</div>
+
     <div style="float: none;width: auto;overflow: hidden;" th:text="#{accion}"></div>
   </div>
   <div class="clearfix">
@@ -48,12 +50,14 @@
   </div>
 
   <div  th:each="cliente : ${listaClientes}" style="margin-top: 6px;" class="clearfix">
-    <div style="float: left;width: 14%" th:text="${cliente.id}">0</div>
-    <div style="float: left;width: 14%" th:text="${cliente.nombre}">nombre</div>
-    <div style="float: left;width: 14%" th:text="${cliente.apellido1}">apellido1</div>
-    <div style="float: left;width: 14%" th:text="${cliente.apellido2 ?: '&nbsp;'}">apellido2</div>
-    <div style="float: left;width: 14%" th:text="${cliente.ciudad}">ciudad</div>
-    <div style="float: left;width: 14%" th:text="${cliente.categoria}">categoría</div>
+    <div style="float: left;width: 10%" th:text="${cliente.id}">0</div>
+    <div style="float: left;width: 10%" th:text="${cliente.nombre}">nombre</div>
+    <div style="float: left;width: 10%" th:text="${cliente.apellido1}">apellido1</div>
+    <div style="float: left;width: 10%" th:text="${cliente.apellido2 ?: '&nbsp;'}">apellido2</div>
+    <div style="float: left;width: 10%" th:text="${cliente.ciudad}">ciudad</div>
+    <div style="float: left;width: 10%" th:text="${cliente.categoria}">categoría</div>
+    <div style="float: left;width: 10%" th:text="${cliente.email}">email</div>
+
     <div style="float: none;width: auto;overflow: hidden;">
       <form th:action="@{/clientes/__${cliente.id}__}" style="display: inline;">
         <input type="submit" th:value="#{detalles}" />
