--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/detalle-cliente.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/cliente/detalle-cliente.html
@@ -87,6 +87,14 @@
             <input th:value="${cliente.categoria}" value="categoria" readonly="readonly"/>
         </div>
     </div>
+    <div style="margin-top: 6px;" class="clearfix">
+        <div style="float: left;width: 50%">
+            <label>Email</label>
+        </div>
+        <div style="float: none;width: auto;overflow: hidden;">
+            <input th:value="${cliente.email}" value="email" readonly="readonly"/>
+        </div>
+    </div>
 
 </div>
 
