--- a/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/comerciales.html
+++ b/spring_boot_web_mvc_jdbc_ventas/spring_boot_web_mvc_jdbc_ventas-master/src/main/resources/templates/comercial/comerciales.html
@@ -34,11 +34,12 @@
     <hr/>
   </div>
   <div class="clearfix">
-    <div style="float: left;width: 14%">Id</div>
-    <div style="float: left;width: 14%" th:text="#{nombre}"></div>
-    <div style="float: left;width: 14%" th:text="#{apellido1}"></div>
-    <div style="float: left;width: 14%" th:text="#{apellido2}"></div>
-    <div style="float: left;width: 14%" th:text="#{comerciales.comision}"></div>
+    <div style="float: left;width: 10%">Id</div>
+    <div style="float: left;width: 10%" th:text="#{nombre}"></div>
+    <div style="float: left;width: 10%" th:text="#{apellido1}"></div>
+    <div style="float: left;width: 10%" th:text="#{apellido2}"></div>
+    <div style="float: left;width: 10%" th:text="#{comerciales.comision}"></div>
+    <div style="float: left;width: 10%"> email</div>
     <div th:text="#{accion}" style="float: none;width: auto;overflow: hidden; "></div>
   </div>
   <div class="clearfix">
@@ -46,11 +47,13 @@
   </div>
 
   <div  th:each="comercial : ${listaComerciales}" style="margin-top: 6px;" class="clearfix">
-    <div style="float: left;width: 14%" th:text="${comercial.id}">0</div>
-    <div style="float: left;width: 14%" th:text="${comercial.nombre}">nombre</div>
-    <div style="float: left;width: 14%" th:text="${comercial.apellido1}">apellido1</div>
-    <div style="float: left;width: 14%" th:text="${comercial.apellido2 ?: '&nbsp;'}">apellido2</div>
-    <div style="float: left;width: 14%" th:text="${comercial.comision}">comisión</div>
+    <div style="float: left;width: 10%" th:text="${comercial.id}">0</div>
+    <div style="float: left;width: 10%" th:text="${comercial.nombre}">nombre</div>
+    <div style="float: left;width: 10%" th:text="${comercial.apellido1}">apellido1</div>
+    <div style="float: left;width: 10%" th:text="${comercial.apellido2 ?: '&nbsp;'}">apellido2</div>
+    <div style="float: left;width: 10%" th:text="${comercial.comision}">comisión</div>
+    <div style="float: left;width: 10%" th:text="${comercial.email}">email</div>
+
     <div style="float: none;width: auto;overflow: hidden;">
       <form th:action="@{/comerciales/__${comercial.id}__}" style="display: inline;">
         <input type="submit" th:value="#{detalles}" />
