--- a/ZZZventasfuncional/src/main/resources/templates/comercial/detalle-comercial.html
+++ b/ZZZventasfuncional/src/main/resources/templates/comercial/detalle-comercial.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle Comercial</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <style>
         .clearfix::after {
             content: "";
@@ -11,9 +13,7 @@
         }
 
     </style>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>
+   </head>
 <body>
 
 <div id="contenedora" style="float:none; margin: 0 auto;width: 900px;" >
@@ -103,11 +103,11 @@
             <th th:text="${pedido.id}"></th>
             <th th:text="${pedido.total}" ></th>
             <th th:text="${pedido.fecha}" ></th>
-            <th><a th:text="${pedido.nombre_cliente}" th:href="@{/clientes/{id}(id=${pedido.id_cliente})}" ></a></th>
+            <th><a th:text="${pedido.nombreCliente}" th:href="@{/clientes/{id}(id=${pedido.idCliente})}" ></a></th>
         </tr>
         </tbody>
     </table>
-    <div>El total de pedidos es <span th:text="${totalPedidos}"></span> y este comercial ha hecho <span th:text="${porcentaje}"></span></div>
+    <div>El total de pedidos es <span th:text="${totalPedidos}"></span> y este comercial ha hecho <span th:text="${porcentaje}"></span>%</div>
 
 
 </div>
