--- a/ZZZventasfuncional/src/main/resources/templates/errores/error-404.html
+++ b/ZZZventasfuncional/src/main/resources/templates/errores/error-404.html
@@ -9,7 +9,7 @@
 <body class="d-flex align-items-center justify-content-center vh-100 bg-light">
 <div class="container text-center">
   <div class="card shadow-lg p-4">
-    <h1 class="text-danger">Error Especifico</h1>
+    <h1 class="text-danger">Ha ocurrido un error 404</h1>
     <p class="text-muted" th:text="${traza}">Mensaje de error</p>
     <a href="/" class="btn btn-primary mt-3">Volver al inicio</a>
   </div>
