--- a/ZZZventasfuncional/src/main/resources/templates/cliente/clientes.html
+++ b/ZZZventasfuncional/src/main/resources/templates/cliente/clientes.html
@@ -1,78 +1,54 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Clientes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <style>
-    .clearfix::after {
-      content: "";
-      display: block;
-      clear: both;
-    }
-
-  </style>
+  <title th:text="#{clientes.titulo}"></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<body>
-
-<div id="contenedora" style="float:none; margin: 0 auto;width: 95%;" >
-  <div class="clearfix">
-    <div style="float: left; width: 50%">
+<div class="container mt-5">
+  <div class="card shadow-sm p-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
       <h1 th:text="#{clientes.titulo}"></h1>
+      <a href="/clientes/crear" class="btn btn-primary" th:text="#{crear}"></a>
     </div>
-    <div style="float: none;width: auto;overflow: hidden;min-height: 80px;position: relative;">
 
-      <div style="position: absolute; left: 39%; top : 39%;">
-
-        <form action="/clientes/crear">
-          <input type="submit" th:value="#{crear}">
-        </form>
-      </div>
-
-    </div>
-  </div>
-  <div class="clearfix">
-    <hr/>
-  </div>
-  <div class="clearfix">
-    <div style="float: left;width: 10%">Id</div>
-    <div style="float: left;width: 10%"th:text="#{nombre}"></div>
-    <div style="float: left;width: 10%" th:text="#{apellido1}"></div>
-    <div style="float: left;width: 10%" th:text="#{apellido2}"></div>
-    <div style="float: left;width: 10%"th:text="#{clientes.ciudad}"></div>
-    <div style="float: left;width: 10%"th:text="#{clientes.categoria}"></div>
-    <div style="float: left;width: 10%">email</div>
-
-    <div style="float: none;width: auto;overflow: hidden;" th:text="#{accion}"></div>
-  </div>
-  <div class="clearfix">
-    <hr/>
-  </div>
-
-  <div  th:each="cliente : ${listaClientes}" style="margin-top: 6px;" class="clearfix">
-    <div style="float: left;width: 10%" th:text="${cliente.id}">0</div>
-    <div style="float: left;width: 10%" th:text="${cliente.nombre}">nombre</div>
-    <div style="float: left;width: 10%" th:text="${cliente.apellido1}">apellido1</div>
-    <div style="float: left;width: 10%" th:text="${cliente.apellido2 ?: '&nbsp;'}">apellido2</div>
-    <div style="float: left;width: 10%" th:text="${cliente.ciudad}">ciudad</div>
-    <div style="float: left;width: 10%" th:text="${cliente.categoria}">categoría</div>
-    <div style="float: left;width: 10%" th:text="${cliente.email}">email</div>
-
-    <div style="float: none;width: auto;overflow: hidden;">
-      <form th:action="@{/clientes/__${cliente.id}__}" style="display: inline;">
-        <input type="submit" th:value="#{detalles}" />
-      </form>
-      <form th:action="@{/clientes/editar/}+${cliente.id} " style="display: inline;">
-        <input type="submit" th:value="#{editar}" />
-      </form>
-      <form th:action="@{/clientes/borrar/__${cliente.id}__}" method="post" style="display: inline;">
-        <input type="submit" th:value="#{eliminar}" />
-      </form>
-    </div>
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col" th:text="#{nombre}"></th>
+        <th scope="col" th:text="#{apellido1}"></th>
+        <th scope="col" th:text="#{apellido2}"></th>
+        <th scope="col" th:text="#{clientes.ciudad}"></th>
+        <th scope="col" th:text="#{clientes.categoria}"></th>
+        <th scope="col">Email</th>
+        <th scope="col" th:text="#{accion}"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="cliente : ${listaClientes}">
+        <td th:text="${cliente.id}"></td>
+        <td th:text="${cliente.nombre}"></td>
+        <td th:text="${cliente.apellido1}"></td>
+        <td th:text="${cliente.apellido2 ?: '&nbsp;'}"></td>
+        <td th:text="${cliente.ciudad}"></td>
+        <td th:text="${cliente.categoria}"></td>
+        <td th:text="${cliente.email}"></td>
+        <td>
+          <div class="btn-group" role="group">
+            <a th:href="@{/clientes/__${cliente.id}__}" class="btn btn-info btn-sm" th:text="#{detalles}"></a>
+            <a th:href="@{/clientes/editar/__${cliente.id}__}" class="btn btn-warning btn-sm" th:text="#{editar}"></a>
+            <form th:action="@{/clientes/borrar/__${cliente.id}__}" method="post" class="d-inline">
+              <button type="submit" class="btn btn-danger btn-sm" th:text="#{eliminar}"></button>
+            </form>
+          </div>
+        </td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
-</body>
 </body>
 </html>
