--- a/ZZZventasfuncional/src/main/resources/templates/cliente/detalle-cliente.html
+++ b/ZZZventasfuncional/src/main/resources/templates/cliente/detalle-cliente.html
@@ -1,105 +1,56 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Detalle Cliente</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <style>
-        .clearfix::after {
-            content: "";
-            display: block;
-            clear: both;
-        }
-
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
-<div id="contenedora" style="float:none; margin: 0 auto;width: 900px;" >
-    <div class="clearfix">
-        <div style="float: left; width: 50%">
+<div class="container mt-5">
+    <div class="card shadow-sm p-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
             <h1>Detalle Cliente</h1>
+            <a href="/clientes" class="btn btn-secondary">Volver</a>
         </div>
-        <div style="float: none;width: auto;overflow: hidden;min-height: 80px;position: relative;">
 
-            <div style="position: absolute; left: 39%; top : 39%;">
-
-                <form action="/clientes" >
-                    <input type="submit" value="Volver" />
-                </form>
+        <form>
+            <div class="mb-3">
+                <label class="form-label">ID</label>
+                <input type="text" class="form-control" th:value="${cliente.id}" readonly>
             </div>
 
-        </div>
-    </div>
+            <div class="mb-3">
+                <label class="form-label">Nombre</label>
+                <input type="text" class="form-control" th:value="${cliente.nombre}" readonly>
+            </div>
 
-    <div class="clearfix">
-        <hr/>
-    </div>
+            <div class="mb-3">
+                <label class="form-label">Apellido 1</label>
+                <input type="text" class="form-control" th:value="${cliente.apellido1}" readonly>
+            </div>
 
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>ID</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.id}" value="id" readonly="readonly"/>
-        </div>
-    </div>
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>Nombre</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.nombre}" value="Cliente" readonly="readonly"/>
-        </div>
-    </div>
+            <div class="mb-3">
+                <label class="form-label">Apellido 2</label>
+                <input type="text" class="form-control" th:value="${cliente.apellido2}" readonly>
+            </div>
 
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>Apellido 1</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.apellido1}" value="apellido1" readonly="readonly"/>
-        </div>
-    </div>
+            <div class="mb-3">
+                <label class="form-label">Ciudad</label>
+                <input type="text" class="form-control" th:value="${cliente.ciudad}" readonly>
+            </div>
 
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>Apellido 2</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.apellido2}" value="apellido2" readonly="readonly"/>
-        </div>
-    </div>
+            <div class="mb-3">
+                <label class="form-label">Categoría</label>
+                <input type="text" class="form-control" th:value="${cliente.categoria}" readonly>
+            </div>
 
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>Ciudad</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.ciudad}" value="ciudad" readonly="readonly"/>
-        </div>
+            <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input type="email" class="form-control" th:value="${cliente.email}" readonly>
+            </div>
+        </form>
     </div>
-
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>Categoría</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.categoria}" value="categoria" readonly="readonly"/>
-        </div>
-    </div>
-    <div style="margin-top: 6px;" class="clearfix">
-        <div style="float: left;width: 50%">
-            <label>Email</label>
-        </div>
-        <div style="float: none;width: auto;overflow: hidden;">
-            <input th:value="${cliente.email}" value="email" readonly="readonly"/>
-        </div>
-    </div>
-
 </div>
-
 </body>
 </html>
