--- a/ZZZventasfuncional/src/main/resources/templates/errores/error.html
+++ b/ZZZventasfuncional/src/main/resources/templates/errores/error.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Error</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-<h1>Ha ocurrido un error Generico</h1>
-<p th:text="${traza}">Mensaje de error</p>
-<a href="/comerciales">Volver al inicio</a>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-light">
+<div class="container text-center">
+  <div class="card shadow-lg p-4">
+    <h1 class="text-danger">Ha ocurrido un error Generico</h1>
+    <p class="text-muted" th:text="${traza}">Mensaje de error</p>
+    <a href="/" class="btn btn-primary mt-3">Volver al inicio</a>
+  </div>
+</div>
 </body>
 </html>
